fix z-index between sort button and navbar

--- a/public/less/app/Navbar.less
+++ b/public/less/app/Navbar.less
@@ -1,7 +1,7 @@
 @import '../variables.less';
 
 .navbar {
-	z-index: 2;
+	z-index: 5;
 	background-color: @bevy-green;
 	border-color: rgba(0,0,0,0);
 	border-radius: 0px;
